[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/man/man06c_cl1.jpg" type="Texture2D" id=1]
[ext_resource path="res://addons/egoventure/nodes/hotspots/hotspot.gd" type="Script" id=2]
[ext_resource path="res://scenes/man/man06c_cl.gd" type="Script" id=3]
[ext_resource path="res://addons/egoventure/nodes/hotspots/trigger_hotspot.gd" type="Script" id=4]
[ext_resource path="res://inventory/insex.tres" type="Resource" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="TriggerHotspot" type="TextureButton" parent="."]
offset_left = 938.685
offset_top = 447.094
offset_right = 1648.69
offset_bottom = 940.094
focus_mode = 0
mouse_default_cursor_shape = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
valid_inventory_items = [ ExtResource( 5 ) ]

[node name="man_hand_on_insex" type="TextureButton" parent="."]
offset_left = 816.0
offset_top = 368.0
offset_right = 1818.0
offset_bottom = 991.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12
visibility_state = "man_hand_on_insex"

[node name="Hotspot" type="TextureButton" parent="."]
offset_left = -17.1189
offset_top = 1014.88
offset_right = 2569.88
offset_bottom = 1457.88
mouse_default_cursor_shape = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 2
target_scene = "res://scenes/man/man06.tscn"
target_view = "back"

[connection signal="item_used" from="TriggerHotspot" to="." method="_on_TriggerHotspot_item_used"]
[connection signal="activate" from="man_hand_on_insex" to="." method="_on_man_hand_on_insex_activate"]
